Fix text truncation for arabic and emoji's

--- a/src/co/collections/item/title.module.styl
+++ b/src/co/collections/item/title.module.styl
@@ -1,6 +1,8 @@
 .path {
     direction: rtl
     text-align: left
+    unicode-bidi: plaintext
+    
     display: block
     white-space: nowrap
     overflow: hidden
